create VerseActivity class & UI.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity
             android:name=".ui.PoemActivity"
             android:theme="@style/AppThemeCustomNoToolbar" />
+        <activity
+            android:name=".ui.VerseActivity"
+            android:theme="@style/AppThemeCustomNoToolbar" />
     </application>
 
 </manifest>
